# bf-rando-installer

./: .gitignore  Cargo.toml  build.rs  build_release.bat
.cargo/: config.toml
src/: dll_classifier.rs  dll_management.rs  dll_parser.rs  game.rs  gui.rs  main.rs  orirando.rs  self_update.rs  settings.rs  steam.rs
src/gui/: app_settings.rs  game_settings.rs  rando.rs  version_row.rs
