[package]
name = "ori-rando-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "0.12.1"
color-eyre = { version = "0.6.3" }
memchr = "2.7.4"
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
windows-sys = { version = "0.59.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_Memory"] }
winreg = "0.55.0"
